--- a/EmpInfo/Views/ApplyExtra/XCAuditorSetting.cshtml
+++ b/EmpInfo/Views/ApplyExtra/XCAuditorSetting.cshtml
@@ -231,11 +231,11 @@
             <button class="btn btn-primary btn-block" id="checkBt" data-loading-text="搜索中..."><i class="fa fa-search"></i> 搜索</button>
         </div>
 
-        <div style="margin-top:10px;">
-            <button class="btn btn-success" id="tb1AddBt"><i class="fa fa-plus"></i> 增加</button>
-            <button class="btn btn-primary" id="tb1ModifyBt"><i class="fa fa-edit"></i> 修改</button>
-            <button class="btn btn-danger" id="tb1RemoveBt"><i class="fa fa-plus"></i> 删除</button>
-            <button class="btn btn-warning" id="tb1CopyBt"><i class="fa fa-copy"></i> 复制上月配置到本月</button>
+        <div>
+            <button class="btn btn-success" id="tb1AddBt" style="margin-top:10px;"><i class="fa fa-plus"></i> 增加</button>
+            <button class="btn btn-primary" id="tb1ModifyBt" style="margin-top:10px;"><i class="fa fa-edit"></i> 修改</button>
+            <button class="btn btn-danger" id="tb1RemoveBt" style="margin-top:10px;"><i class="fa fa-plus"></i> 删除</button>
+            <button class="btn btn-warning" id="tb1CopyBt" style="margin-top:10px;"><i class="fa fa-copy"></i> 复制上月配置到本月</button>
         </div>
         <table id="tb1"></table>
 
@@ -265,6 +265,7 @@
                         <option value="光电">光电</option>
                         <option value="半导体">半导体</option>
                         <option value="电子">电子</option>
+                        <option value="光电仁寿">光电仁寿</option>
                     </select>
                     <div>部门名称：</div>
                     <input type="text" class="form-control" name="dep_name" style="margin-top:4px;" />
