--- a/EmpInfo/Views/Apply/BeginApplyXC.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyXC.cshtml
@@ -626,14 +626,14 @@
                     <input type="text" class="form-control select-user" name="buyer_auditor" placeholder="选择采购员" required />
                 </div>
             </div>
-            <div class="b-div">
+            @*<div class="b-div">
                 <span class="b-label">
                     物料组:
                 </span>
                 <div class="b-input">
                     <input type="text" class="form-control select-user" name="mat_group" placeholder="选择物料组人员" required />
                 </div>
-            </div>
+            </div>*@
             <div class="b-div">
                 <span class="b-label">
                     原料发出明细:
@@ -656,9 +656,10 @@
     <div class="panel-body">
         <h4 class="text-danger"><i class="fa fa-info-circle"></i> 说明 </h4>
         <div style="margin-left:18px;padding-top:6px;" class="text-danger">
-            <p>
-                1. 流程步骤：流程开始--->提交申请--->计划部负责人审批-->部门主管审批--->部门总经理审批--->采购询价--->营运部审批--->
-                总裁办审批（若部门累计金额超过月度目标）--->采购部下单--->物料组审批--->物流发出原料盘点--->仓库接收产成品--->营运部抽检--->申请人确认领回--->结束
+            <p>                
+                0. 提交时建议在电脑端操作，使用google chrome或360极速浏览器，打开内网网址：http://192.168.90.100/Emp ,登陆移动办公平台提交申请。<br />            
+                1. 流程步骤：流程开始--->提交申请--->计划部负责人审批-->部门主管审批--->部门总经理审批--->采购询价--->营运部审批（若部门累计金额超过月度目标）--->
+                总裁办审批(由营运部确定是否需要)--->采购部下单--->申请人提交结案申请--->营运部审批结案申请--->结束
                 <br/>
                 2. 委外时间设定为每周一至周五下午五点前，超出则顺延至第二个工作日处理。
                 <br/>
